--- a/etc/crontab.liquid
+++ b/etc/crontab.liquid
@@ -29,8 +29,9 @@ MAILTO=""
 
 #run a fixity batch - the script itself will make sure that only one copy 
 #is running at a time, and it's cheap to try every minute
-*/1 0-5,18-23 * * 1-5 $HOME/bin/run_fixity_batch.sh
-*/1 * * * 6-7 $HOME/bin/run_fixity_batch.sh
+#*/1 0-5,18-23 * * 1-5 $HOME/bin/run_fixity_batch.sh
+#*/1 * * * 6-7 $HOME/bin/run_fixity_batch.sh
+*/1 * * * * $HOME/bin/run_fixity_batch.sh
 
 #schedule amazon backup for amqp accrual groups
 #15 3 * * Thu $HOME/bin/schedule-amqp-amazon-backups
