--- a/etc/monitrc.liquid
+++ b/etc/monitrc.liquid
@@ -65,6 +65,12 @@ check process delayed-job-idb-1 with pidfile {{ medusa_home }}/tmp/pids/delayed_
   start program = "{{ home }}/bin/delayed_job start idb 1"
   stop program = "{{ home }}/bin/delayed_job stop idb 1"
 
+check process delayed-job-short-1 with pidfile {{ medusa_home }}/tmp/pids/delayed_job/short/delayed_job.1.pid
+  group rails
+  group delayed_job
+  start program = "{{ home }}/bin/delayed_job start short 1"
+  stop program = "{{ home }}/bin/delayed_job stop short 1"
+
 check filesystem rclone-mount path {{ rclone_mountpoint }}
   start program = "{{ home }}/bin/rclone-mount.sh"
   stop program = "{{ home }}/bin/rclone-unmount.sh"
