Remove stop line from rclone-mount and add 'with'

--- a/etc/monitrc.liquid
+++ b/etc/monitrc.liquid
@@ -71,6 +71,5 @@ check process delayed-job-short-1 with pidfile {{ medusa_home }}/tmp/pids/delaye
   start program = "{{ home }}/bin/delayed_job start short 1"
   stop program = "{{ home }}/bin/delayed_job stop short 1"
 
-check filesystem rclone-mount path {{ rclone_mountpoint }}
+check filesystem rclone-mount with path {{ rclone_mountpoint }}
   start program = "{{ home }}/bin/rclone-mount.sh"
-  stop program = "{{ home }}/bin/rclone-unmount.sh"
