--- a/etc/monitrc.liquid
+++ b/etc/monitrc.liquid
@@ -47,7 +47,7 @@ check process delayed-job-ideals-1 with pidfile {{ medusa_home }}/tmp/pids/delay
   start program = "{{ home }}/bin/delayed_job start ideals 1"
   stop program = "{{ home }}/bin/delayed_job stop ideals 1"
   
-check process delayed-job-ideals-1 with pidfile {{ medusa_home }}/tmp/pids/delayed_job/dspace/delayed_job.1.pid
+check process delayed-job-dspace-1 with pidfile {{ medusa_home }}/tmp/pids/delayed_job/dspace/delayed_job.1.pid
   group rails
   group delayed_job
   start program = "{{ home }}/bin/delayed_job start dspace 1"
