--- a/etc/crontab.liquid
+++ b/etc/crontab.liquid
@@ -12,6 +12,9 @@ MAILTO=""
 #check message receiver daemon, restarting if necessary
 */2 * * * * $HOME/bin/check-message-receiver-daemon
 
+#fetch assessor responses
+*/5 * * * * $HOME/bin/fetch-assessor-responses.sh
+
 #update the medusa timeline stats
 30 1 * * * $HOME/bin/refresh-timeline-stats
 
