add support for processing globus transfers in a rate-limited way

--- a/etc/crontab.liquid
+++ b/etc/crontab.liquid
@@ -10,10 +10,13 @@ MAILTO=""
 0 4 * * * touch $HOME/medusa/tmp/restart.txt
 
 #fetch messages
-*/15 * * * * $HOME/bin/fetch-messages
+*/5 * * * * $HOME/bin/fetch-messages
 
 #handle messages
-*/15 * * * * $HOME/bin/handle-messages
+*/5 * * * * $HOME/bin/handle-messages
+
+#process globus transfers
+0 * * * * $HOME/bin/process-globus-transfers
 
 #initiate assessor tasks
 */7 * * * * $HOME/bin/assessor-initiate-task-batch.sh
